--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,17 @@
             </div>            
         </div>
         <div class="words">
-            <span class="word" style="display: none;">Environment</span>
-            <span class="word">Education</span>
-            <span class="word">Health</span>
-            <span class="word">Community Development</span>
-            <span class="word">Arts and Culture</span>
-            <span class="word">Animal Welfare</span>
-            <span class="word">Social Services</span>
-            <span class="word">Technology</span>
-            <span class="word">Sports and Recreation</span>
-            <span class="word">Disaster Relief</span>
-        </div>
+            <span class="word" style="display: block;">Environment</span>
+            <span class="word" style="display: none;">Education</span>
+            <span class="word" style="display: none;">Health</span>
+            <span class="word" style="display: none;">Community Development</span>
+            <span class="word" style="display: none;">Arts and Culture</span>
+            <span class="word" style="display: none;">Animal Welfare</span>
+            <span class="word" style="display: none;">Social Services</span>
+            <span class="word" style="display: none;">Technology</span>
+            <span class="word" style="display: none;">Sports and Recreation</span>
+            <span class="word" style="display: none;">Disaster Relief</span>
+        </div>        
     </section>
 </body>
 <footer>
